--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -9,6 +9,7 @@ order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "disk /"
 order += "volume master"
+order += "battery 0"
 order += "tztime local"
 
 volume master {
@@ -44,3 +45,7 @@ tztime local {
   format = " %Y-%m-%d %H:%M "
 }
 
+battery 0 {
+    format = " ⚡: %percentage %remaining "
+    low_threshold = "30"
+}
