--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -46,6 +46,6 @@ tztime local {
 }
 
 battery 0 {
-    format = " ⚡: %percentage %remaining "
+    format = " ⚡: %percentage "
     low_threshold = "30"
 }
